--- a/ExpressApp2/ExpressApp2/views/dialog.html
+++ b/ExpressApp2/ExpressApp2/views/dialog.html
@@ -98,14 +98,20 @@
                                     <!-- 학습 추천 테이블 --> 
                                     <div class="Tbl_wrap">
                                         <table class="Tbl" summary="학습 추천 결과">
+                                            <!--
                                             <colgroup><col width="15%"/><col width="25%"/><col width="40%"/><col width="17%"/><col width="3%"/></colgroup>
-                                            
+                                            -->
+                                            <colgroup><col width="10%"/><col width="20%"/><col width=""/><col width="15%"/><col width="10%"/><col width="3%"/></colgroup>
+                                            <input type="hidden" name="sourceType" id="tblSourceType" value="D">
                                                   <tr>
-                                                      <th>                                                        
+                                                       <!-- 
+                                                      <th>                                                  
                                                       <select name="sourceType" id="tblSourceType" class="form-control f01"> 
                                                             <option value="D" selected="selected">Common</option>
                                                        </select>
                                                       </th>
+                                                      -->
+                                                      <th>&nbsp;</th>
                                                       <th>
                                                         <div id="selectBoxArea" class="selectArea">
                                                             <div class="inputfield selectArea">
