--- a/ExpressApp2/ExpressApp2/public/common/css/default.css
+++ b/ExpressApp2/ExpressApp2/public/common/css/default.css
@@ -98,7 +98,8 @@
 .dialog_wrap{ width:100%; display:inline-block; margin-top:10px}
 .dialog_l{ width:6%; float:left; text-align:right}
 .dialog_r{ width:94%; float:left; padding-left:7px}
-.dialog_box{ width:98%; height:450px; background-color:#e6e9ec; border-radius:5px; display:inline-block; padding:1%; overflow-x:hidden; overflow-y:auto  }
+.dialog_box{ width:98%; height:350px; background-color:#e6e9ec; border-radius:5px; display:inline-block; padding:1%; overflow-x:hidden; overflow-y:auto  }
+/*.dialog_box{ width:98%; height:450px; background-color:#e6e9ec; border-radius:5px; display:inline-block; padding:1%; overflow-x:hidden; overflow-y:auto  }*/
 .dialog_result{ width:100%; clear:both; padding-left:25px}
 .dialog_result strong{ color:#ff6b00}
 .dialog_box02{ width: 850px; height:400px;display:inline-block; overflow-y:hidden; overflow-x:auto ; margin-left:25px}
