--- a/ExpressApp2/ExpressApp2/views/leftSideBar.html
+++ b/ExpressApp2/ExpressApp2/views/leftSideBar.html
@@ -87,6 +87,7 @@
                                     <li><a href="/learning/recommend"><i class="fa  fa-circle-o"></i><%= __('RECOMMENDATION') %></a></li>
                                     <li><a href="/learning/utterances"><i class="fa fa-circle-o"></i> <%= __('UTTERANCE_SETTING') %></a></li>
                                     <li><a href="/learning/dialog"><i class="fa fa-circle-o"></i> <%= __('DIALOG_SETTING') %></a></li>
+                                    <li><a href="/learning/context"><i class="fa fa-circle-o"></i> Context 관리</a></li>
                                     <li><a href="/learning/entities"><i class="fa fa-circle-o"></i> <%= __('ENTITY_SETTING') %></a></li>
                                     <li class="active"><a href="#" class="spmenu" id="trainBtn" ><%= __('TRAIN') %></a></li>
                                     <li class="active"><a href="#" class="spmenu" id="simulBtn" data-toggle="control-sidebar" ><%= __('SIMULATION') %></a></li>
