--- a/ExpressApp2/ExpressApp2/views/common/commonLib.html
+++ b/ExpressApp2/ExpressApp2/views/common/commonLib.html
@@ -10,7 +10,7 @@
 <script src="/common/js/jquery.min.js"></script>
 <script src="/common/js/bootstrap.min.js"></script>
 <script src="/common/js/adminlte.min.js"></script>
-<script type="text/javascript" src="/js/import/jquery-2.2.4.min.js" charset="utf-8"></script>
+<!--<script type="text/javascript" src="/js/import/jquery-2.2.4.min.js" charset="utf-8"></script>-->
 <script src="/common/js/icheck.min.js"></script>
 
 <%
