--- a/ExpressApp2/ExpressApp2/views/leftSideBar_admin.html
+++ b/ExpressApp2/ExpressApp2/views/leftSideBar_admin.html
@@ -16,10 +16,37 @@
       <ul class="sidebar-menu" data-widget="tree">
             <li class="header">Menu</li>
             <li class="treeview" id="userMngClick"> <a href="/users/userMng"><i class="fa fa-edit"></i> <span><%= __('USER_MNG') %></span></a> </li>
-            <li class="treeview" id="userAugthClick"> <a href="/users/userAuthMng"><i class="fa fa-lock"></i> <span><%= __('USER_AUTH_MNG') %></span></a> </li>
+            <!--<li class="treeview" id="userAugthClick"> <a href="/users/userAuthMng"><i class="fa fa-lock"></i> <span><%= __('USER_AUTH_MNG') %></span></a> </li>-->
             <li class="treeview" id="chatAugthClick"> <a href="/users/chatBotMng"><i class="fa fa-lock"></i> <span><%= __('CHATBOT_MNG') %></span></a> </li>
             <!-- 추후 사용 예정 -->
             <!-- <li class="treeview" id="apiMngClick"> <a href="/users/apiSetting"><i class="fa  fa-file-text-o"></i> <span><%= __('API_MNG') %></span></a> </li> -->
+            <li class=" treeview"><!--<li class="active treeview">-->  
+                <a href="#">
+                  <i class="fa fa-desktop"></i> <span>DashBoard 관리</span>
+                  <span class="pull-right-container">
+                    <i class="fa fa-angle-left pull-right"></i>
+                  </span>
+                </a>
+                <ul class="treeview-menu" >
+                  <li><a href="/boardMng/boardMng"><i class="fa  fa-circle-o"></i>DashBoard 항목관리</a></li>
+                  <li><a href="/boardMng/boardUserMng"><i class="fa fa-circle-o"></i>DashBoard 사용자연결</a></li>
+                </ul>
+              </li>
+              <li class=" treeview"><!--<li class="active treeview">-->  
+                <a href="#">
+                  <i class="fa fa-desktop"></i> <span>공통관리</span>
+                  <span class="pull-right-container">
+                    <i class="fa fa-angle-left pull-right"></i>
+                  </span>
+                </a>
+                <ul class="treeview-menu" >
+                  <li><a href="/code/codeMasterMng"><i class="fa  fa-circle-o"></i>공통코드관리</a></li>
+                  <li><a href="/menu/menuMng"><i class="fa fa-circle-o"></i> 메뉴관리</a></li>
+                  <li><a href="/auth/authMasterMng"><i class="fa fa-circle-o"></i> 권힌그룹관리</a></li>
+                  <li><a href="/user/userAuthMng"><i class="fa fa-circle-o"></i> 사용자 권한관리</a></li>
+                  <li><a href="/user/userAppMappingMng"><i class="fa fa-circle-o"></i> 사용자 앱매핑 관리</a></li>
+                </ul>
+              </li>
       </ul>
       <!-- // left Menu -->
                               
@@ -60,5 +87,4 @@
             $(location).attr('href',url);
         });
     });
-
   </script>
